# subvocal

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  subvocal-pre-materials-tasklist.md  subvocal-sample.yaml  treehacks-2026-reference.md
architecture/: 01-neckband-vs-earbud.md  02-electrode-layout.md  03-chin-extension.md  04-intent-reconstruction.md  05-signal-path-diagram.md  06-architecture-piece.md  ARCHITECTURE-NOTES.md
benchmarks/: eval_runner.py  intent_eval.py
demo/: index.html
docs/: api.html  docs.html  docusaurus.config.ts  index.css  index.html  package-lock.json  walkthrough.html
docs/api/: index.md
docs/content/: architecture.md  classifiers.md  declaration.md  hardware-drivers.md  intent-benchmark.md  mcp-profile.md  positioning.md  release-process.md  security.md  walkthrough.md
docs/docs/: first_agent.md  getting_started.md  intro.md
docs/platform/: architecture.html  benchmark-report.html  classifiers.html  declaration.html  hardware-drivers.html  index.html  intent-benchmark.html  intent-layer.html  mcp-profile.html  phase0-results.html  positioning.html  reference-bom.html  release-process.html  security.html
notebooks/: subvocal_walkthrough.ipynb
opencode-console-src/: config.ts
opencode-console-src/i18n/: en.ts
platform/: Silent Speech Research Synthesis.md  architecture_design.md  benchmark_report.md  code_review_findings.md  intent_layer_documentation.md  security_specifications.md  subvocal-middleware-build-list.md  subvocal-middleware-playbook.md  subvocal-pre-materials-tasklist.md
platform/architecture/: 03-chin-extension.md
sdk/context/: manager.py  mock_data.py  providers.py  schema.py
sdk/core/: corrections.py  dashboard.py  interfaces.py  llm_providers.py  pipeline.py  prompts.py  security.py  test_core.py  (+4 more)
software/: PHASE0_METHOD_RESULTS.md  README.md  bom.md
tests/: test_auth.py  test_brainflow_compat.py  test_concurrency.py  test_config.py  test_context.py  test_core.py  test_datachannel.py  test_datasets.py  test_enterprise.py  test_hardware.py  test_ingress_egress.py  test_intent_core.py  test_mcp.py  test_ml.py  test_routing.py  test_runtime.py  test_security.py  test_shorthand.py  test_smoke.py  test_store.py  test_stream.py  test_telemetry.py
thesis/: subvocal-pre-materials-tasklist.md
tools/: build_api_page.py  build_site.py  check_licenses.py  generate_api_docs.py  run_benchmarks.py
(+172 files in other folders)
