[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subvocal"
dynamic = ["version"]
description = "Hardware-agnostic middleware connecting sEMG silent-speech interfaces to LLM agents"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Pranav Kalkunte", email = "pranav.kalkunte@utexas.edu" }]
keywords = ["semg", "silent-speech", "subvocal", "bci", "llm", "agents", "mcp", "accessibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.20",
    "platformdirs>=3.0",
]

[project.urls]
Homepage = "https://github.com/PranavKalkunte/subvocal"
Documentation = "https://github.com/PranavKalkunte/subvocal/tree/main/docs"
Changelog = "https://github.com/PranavKalkunte/subvocal/blob/main/CHANGELOG.md"

[project.optional-dependencies]
ml = [
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "joblib>=1.1",
    "torch>=2.0",
]
hardware = [
    "scipy>=1.7",
    "h5py>=3.0",
]
tts = ["pyttsx3>=2.90"]
export = ["onnx>=1.14"]
all = ["subvocal[ml,hardware,tts,export]"]
dev = [
    "subvocal[all]",
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "pyright>=1.1.350",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
subvocal-mcp = "subvocal.mcp.server:main"

[tool.hatch.version]
path = "src/subvocal/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/subvocal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 120
src = ["src", "tests", "benchmarks", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: long lines are tolerated in docstrings/log messages; E741: single-letter
# math variable names are conventional in the DSP/ML code.
ignore = ["E501", "E741"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = "warning"
